<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_msg"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/input_msg_discr"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_msg"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/btn_send_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_msg"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="@string/btn_qr_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_qr_read"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_msg"/>
    <Button
            android:text="@string/btn_send_later_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send_later"
            app:layout_constraintStart_toStartOf="@+id/btn_send"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_send"/>
    <Button
            android:text="@string/btn_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_history"
            app:layout_constraintEnd_toEndOf="@+id/btn_qr_read"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_qr_read"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="368dp"
            android:layout_height="275dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_send_later"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.826"/>
</android.support.constraint.ConstraintLayout>